# QuantumLeap

./: .gitignore  .windsurfrules  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REBRAND_SUMMARY.md  config.json  init-git.sh  llm-core.code-workspace  llm-deployment.code-workspace  llm-python.code-workspace  memoria.md  memory.md  setup.sh
.windsurf/agents/: llm-integration-agent.yaml  memory-safety-agent.yaml  turboquant-optimizer.yaml
.windsurf/skills/: cuda-kernel-optimization.md  optimize-simd.md  turboquant-integration.md
.windsurf/workflows/: build-and-test.md  deploy-model.md  optimize-kernel.md
api/: requirements.txt  server.py
core/: CMakeLists.txt  README.md
core/include/turboquant/: cuda_utils.cuh  simd_utils.h  turboquant.h
core/src/expertflow/: expert_cache.cpp  expert_compressor.cpp  expert_map.cpp  expert_prefetcher.cpp  moe_dispatch_cuda.cu  pipeline_controller.cpp
core/src/kernels/: attention_compressed.cu  dequant_fast.S  matmul_int2.cu  matmul_int4.cu
core/src/llama_integration/: ggml_turboquant.cpp  llama_cpp_patch.cpp
core/src/turboquant/: kv_cache_compress.cu  lookup_tables.cpp  polar_transform.cpp  polar_transform_avx512.S  residual_quant.cpp
core/tests/: accuracy_test.cpp  benchmark_matmul.cpp  benchmark_polar.cpp
deployment/: README.md
deployment/api/: model_manager.py  openai_server.py
deployment/configs/deployment/: development.yaml  production.yaml
deployment/configs/models/: llama-3b-turboquant.yaml  mistral-7b-turboquant.yaml  qwen-72b-turboquant.yaml
deployment/docker/: Dockerfile.turboquant  docker-compose.yml
deployment/scripts/: benchmark.sh  launch_model.sh  optimize_system.sh
python/: README.md  requirements.txt  setup.py
python/benchmarks/: accuracy_test.py  speed_test.py
python/inference/: transformers_patch.py  vllm_integration.py
python/training/: calibration.py  quant_aware_training.py
python/turboquant_py/: __init__.py  model_converter.py  quantizer.py
scripts/: download_model.sh  setup.sh  start.bat  start.sh  start_mac.sh  test_tq3.sh
web/: index.html
web/static/: app.js  style.css
